# pops

./: .coderabbit.yaml  .dependency-cruiser-known-violations.json  .dependency-cruiser.cjs  .dependency-cruiser.rules.generated.cjs  .dockerignore  .env.example  .escape-hatch-baseline.json  .gitignore  .impeccable.md  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .room-agent.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONVENTIONS.md  Cargo.toml  DEPLOY.md  README.md  WIRE-FORMAT.md  deny.toml  deploy.sh  eslint.config.base.mjs  lint-staged.config.mjs  mise.ci.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-notes.md  release-please-config.json  sandbox.toml  tsconfig.base.json  tsconfig.build.json  turbo.json  vitest.config.ts
.github/: copilot-instructions.md  dependabot.yml
.github/scripts/: release.sh
.github/workflows/: _discover-units.yml  _pkg-check.yml  agent-review.yml  ai-quality.yml  ai-telemetry-quality.yml  ansible-ci.yml  api-client-quality.yml  api-quality.yml  api-test.yml  app-quality.yml  cerebrum-api-quality.yml  cerebrum-db-quality.yml  cerebrum-quality.yml  ci-gate.yml  contract-semver.yml  core-api-quality.yml  core-quality.yml  db-types-quality.yml  deploy.yml  docker-build.yml  e2e.yml  fe-quality.yml  fe-test-e2e.yml  finance-api-ci.yml  finance-api-quality.yml  finance-db-quality.yml  finance-quality.yml  food-api-quality.yml  food-db-quality.yml  food-quality.yml  format-drift-watchdog.yml  infra-lint.yml  infra-quality.yml  inventory-api-quality.yml  inventory-db-quality.yml  inventory-quality.yml  lists-api-quality.yml  lists-db-quality.yml  lists-quality.yml  media-api-quality.yml  (+30 more)
.husky/: pre-push
apps/finance-api/: Dockerfile  package.json
apps/moltbot/: README.md
apps/pops-api/: .env.example  .gitignore  Dockerfile  drizzle.config.ts  eslint.config.js  package.json  vitest.config.ts  vitest.integration.config.ts
apps/pops-cerebrum-api/: Dockerfile  package.json
apps/pops-cli/: package.json
apps/pops-core-api/: Dockerfile  package.json
apps/pops-docs/: Dockerfile  package.json  tsconfig.json
apps/pops-finance-api/: Dockerfile  package.json
apps/pops-food-api/: Dockerfile  package.json
apps/pops-ha-bridge-api/: Dockerfile  package.json
apps/pops-inventory-api/: Dockerfile  package.json  tsconfig.json
apps/pops-lists-api/: Dockerfile  package.json
apps/pops-mcp/: Dockerfile  README.md  package.json  tsconfig.json
apps/pops-media-api/: Dockerfile  package.json
apps/pops-orchestrator/: Dockerfile  package.json
apps/pops-pwa/: CLAUDE.md  Dockerfile  components.json  nginx.conf  package.json  playwright.config.ts
apps/pops-shell/: Dockerfile  README.md  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/pops-storybook/: eslint.config.js  package.json  tsconfig.json
apps/pops-worker-food/: package.json
crates/: Cargo.toml
crates/pops-ai/: Cargo.toml
crates/pops-ai/src/: call.rs  record.rs
crates/pops-ai/tests/: contract.rs
crates/pops-settings/: Cargo.toml
crates/pops-settings/src/: manifest.rs  openapi.rs  redact.rs  routes.rs  wire.rs
crates/pops-settings/tests/: contract.rs
crates/pops-settings/tests/fixtures/: settings.json
docs/: CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  README.md  manual-test-plan-non-finance.md  responsive-foundation.md  roadmap.md
docs-v2/: CLAUDE.md  README.md  vision.md
docs-v2/architecture/: adr-001-sqlite-source.md  adr-004-api-domain-modules.md  adr-007-package-manager-task-runner.md  adr-008-media-split-tables.md  adr-009-metadata-sources.md  adr-011-local-image-cache.md  adr-013-drizzle-orm.md
docs-v2/ideas/: app-ideas.md  media-ideas.md
docs-v2/runbooks/: go-live.md
docs-v2/themes/: README.md
docs/_templates/: adr.md  epic.md  prd.md  theme-readme.md  us.md
docs/architecture/: adr-001-sqlite-source.md  adr-002-shell-architecture.md  adr-003-component-library-and-api.md  adr-003-component-library.md  adr-004-api-domain-modules.md  adr-004-tailwind-only-styling.md  adr-005-package-manager-and-task-runner.md  adr-005-shared-entities.md  adr-006-tailwind-only-styling.md  adr-010-pairwise-elo-ratings.md  adr-011-drizzle-orm.md  adr-012-universal-object-uri.md  adr-014-trpc.md  adr-015-cloudflare-tunnel-access.md  adr-016-redis-queue-cache.md  adr-017-openapi-secondary-contract.md  adr-018-sqlite-vec-vector-storage.md  (+20 more)
examples/pops-pillar-rust-example/: Cargo.toml  Dockerfile  README.md
examples/pops-pillar-rust-example/src/: main.rs
infra/: docker-compose.dev.yml  docker-compose.yml  recovery.md
libs/pops-ai/: Cargo.toml  mise.toml
libs/pops-ai/src/: cost.rs  lib.rs  pricing.rs  sink.rs
libs/pops-ai/tests/fixtures/: record.json
libs/pops-settings/: Cargo.toml
libs/pops-settings/src/: error.rs  handlers.rs  lib.rs  service.rs
pillars/contacts/: Cargo.toml  Dockerfile  README.md  mise.toml
pillars/contacts/docs/: README.md
pillars/contacts/docs/ideas/: contacts-frontend.md
pillars/contacts/docs/prds/: registration.md
pillars/contacts/docs/prds/entities/: README.md
pillars/contacts/docs/prds/registration/: README.md
pillars/contacts/docs/prds/search/: README.md
pillars/contacts/migrations/: 0001_init.sql  0002_entities.sql  0003_entities_name_ci_unique.sql
pillars/contacts/openapi/: contacts.openapi.json
pillars/contacts/src/: api.rs  app.rs  config.rs  db.rs  health.rs  lib.rs  main.rs  manifest.rs  openapi.rs  time.rs
pillars/contacts/src/entities/: mod.rs  model.rs  repo.rs  routes.rs
pillars/contacts/src/registry/: lifecycle.rs  mod.rs  transport.rs
pillars/contacts/src/search/: mod.rs  routes.rs
pillars/contacts/tests/: entities.rs  health.rs  openapi_contract.rs  registry.rs
scripts/: check-bundle-map-coverage.mjs  check-escape-hatches.mjs  check-exports.mjs  check-package-scripts.mjs  check-pillar-schema-coverage.mjs  check-tailwind-source-coverage.mjs  cleanup-duplicate-entities.ts  generate-pillar-dockerfile.mjs  sync-entities-only.ts
(+7585 files in other folders)
