# POPS Cargo workspace root.
#
# Owned by the `contacts` extraction plan (the first Rust pillar). Future
# Rust crates (`pops-ai`, `pops-settings`) join `[workspace].members` here;
# they do NOT create a second workspace. One lockfile, one shared dependency
# set, one Rust CI lane.
#
# The pillar crate lives under `pillars/contacts` (colocated with its TS
# frontend, mirroring the PRD-253 pillar layout) and is referenced as a
# member by relative path.
[workspace]
resolver = "2"
members = ["../pillars/contacts"]

[workspace.package]
edition = "2021"
license = "UNLICENSED"
publish = false

# Shared dependency versions every member crate inherits via
# `dep = { workspace = true }`. New Rust pillars pin their deps here so the
# workspace resolves a single coherent set.
[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
utoipa = { version = "5", features = ["axum_extras"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
