[package]
name = "pops-pillar-rust-example"
version = "0.1.0"
edition = "2021"
publish = false
description = "Reference Rust pillar implementing the POPS wire-format v1 spec (PRD-233)."

[[bin]]
name = "pops-pillar-rust-example"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
time = { version = "0.3", features = ["serde-well-known", "formatting"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
